--- a/notebooks/example_util_Encode.ipynb
+++ b/notebooks/example_util_Encode.ipynb
@@ -536,14 +536,19 @@
        "  15: 'Prof-school',\n",
        "  16: 'Doctorate'},\n",
        " 'class': {0: '<=50K', 1: '>50K'},\n",
-       " 'workclass': {0: 'Federal-gov',\n",
-       "  1: 'Local-gov',\n",
-       "  2: 'Never-worked',\n",
-       "  3: 'Private',\n",
-       "  4: 'Self-emp-inc',\n",
-       "  5: 'Self-emp-not-inc',\n",
-       "  6: 'State-gov',\n",
-       "  7: 'Without-pay'},\n",
+       " 'marital-status': {0: 'Divorced',\n",
+       "  1: 'Married-AF-spouse',\n",
+       "  2: 'Married-civ-spouse',\n",
+       "  3: 'Married-spouse-absent',\n",
+       "  4: 'Never-married',\n",
+       "  5: 'Separated',\n",
+       "  6: 'Widowed'},\n",
+       " 'relationship': {0: 'Husband',\n",
+       "  1: 'Not-in-family',\n",
+       "  2: 'Other-relative',\n",
+       "  3: 'Own-child',\n",
+       "  4: 'Unmarried',\n",
+       "  5: 'Wife'},\n",
        " 'occupation': {0: 'Adm-clerical',\n",
        "  1: 'Armed-Forces',\n",
        "  2: 'Craft-repair',\n",
@@ -599,25 +604,20 @@
        "  38: 'United-States',\n",
        "  39: 'Vietnam',\n",
        "  40: 'Yugoslavia'},\n",
+       " 'sex': {0: 'Female', 1: 'Male'},\n",
+       " 'workclass': {0: 'Federal-gov',\n",
+       "  1: 'Local-gov',\n",
+       "  2: 'Never-worked',\n",
+       "  3: 'Private',\n",
+       "  4: 'Self-emp-inc',\n",
+       "  5: 'Self-emp-not-inc',\n",
+       "  6: 'State-gov',\n",
+       "  7: 'Without-pay'},\n",
        " 'race': {0: 'Amer-Indian-Eskimo',\n",
        "  1: 'Asian-Pac-Islander',\n",
        "  2: 'Black',\n",
        "  3: 'Other',\n",
-       "  4: 'White'},\n",
-       " 'relationship': {0: 'Husband',\n",
-       "  1: 'Not-in-family',\n",
-       "  2: 'Other-relative',\n",
-       "  3: 'Own-child',\n",
-       "  4: 'Unmarried',\n",
-       "  5: 'Wife'},\n",
-       " 'sex': {0: 'Female', 1: 'Male'},\n",
-       " 'marital-status': {0: 'Divorced',\n",
-       "  1: 'Married-AF-spouse',\n",
-       "  2: 'Married-civ-spouse',\n",
-       "  3: 'Married-spouse-absent',\n",
-       "  4: 'Never-married',\n",
-       "  5: 'Separated',\n",
-       "  6: 'Widowed'}}"
+       "  4: 'White'}}"
       ]
      },
      "execution_count": 9,
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "5f9f92fc",
    "metadata": {},
    "outputs": [
@@ -780,7 +780,7 @@
        "4           Cuba  <=50K  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "61bb99c0",
    "metadata": {},
    "outputs": [
@@ -1028,7 +1028,7 @@
        "[5 rows x 89 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "d8d4d874",
    "metadata": {
     "scrolled": true
@@ -1067,14 +1067,19 @@
        "  15: 'Prof-school',\n",
        "  16: 'Doctorate'},\n",
        " 'class': {0: '<=50K', 1: '>50K'},\n",
-       " 'workclass': {0: 'Federal-gov',\n",
-       "  1: 'Local-gov',\n",
-       "  2: 'Never-worked',\n",
-       "  3: 'Private',\n",
-       "  4: 'Self-emp-inc',\n",
-       "  5: 'Self-emp-not-inc',\n",
-       "  6: 'State-gov',\n",
-       "  7: 'Without-pay'},\n",
+       " 'marital-status': {0: 'Divorced',\n",
+       "  1: 'Married-AF-spouse',\n",
+       "  2: 'Married-civ-spouse',\n",
+       "  3: 'Married-spouse-absent',\n",
+       "  4: 'Never-married',\n",
+       "  5: 'Separated',\n",
+       "  6: 'Widowed'},\n",
+       " 'relationship': {0: 'Husband',\n",
+       "  1: 'Not-in-family',\n",
+       "  2: 'Other-relative',\n",
+       "  3: 'Own-child',\n",
+       "  4: 'Unmarried',\n",
+       "  5: 'Wife'},\n",
        " 'occupation': {0: 'Adm-clerical',\n",
        "  1: 'Armed-Forces',\n",
        "  2: 'Craft-repair',\n",
@@ -1130,28 +1135,23 @@
        "  38: 'United-States',\n",
        "  39: 'Vietnam',\n",
        "  40: 'Yugoslavia'},\n",
+       " 'sex': {0: 'Female', 1: 'Male'},\n",
+       " 'workclass': {0: 'Federal-gov',\n",
+       "  1: 'Local-gov',\n",
+       "  2: 'Never-worked',\n",
+       "  3: 'Private',\n",
+       "  4: 'Self-emp-inc',\n",
+       "  5: 'Self-emp-not-inc',\n",
+       "  6: 'State-gov',\n",
+       "  7: 'Without-pay'},\n",
        " 'race': {0: 'Amer-Indian-Eskimo',\n",
        "  1: 'Asian-Pac-Islander',\n",
        "  2: 'Black',\n",
        "  3: 'Other',\n",
-       "  4: 'White'},\n",
-       " 'relationship': {0: 'Husband',\n",
-       "  1: 'Not-in-family',\n",
-       "  2: 'Other-relative',\n",
-       "  3: 'Own-child',\n",
-       "  4: 'Unmarried',\n",
-       "  5: 'Wife'},\n",
-       " 'sex': {0: 'Female', 1: 'Male'},\n",
-       " 'marital-status': {0: 'Divorced',\n",
-       "  1: 'Married-AF-spouse',\n",
-       "  2: 'Married-civ-spouse',\n",
-       "  3: 'Married-spouse-absent',\n",
-       "  4: 'Never-married',\n",
-       "  5: 'Separated',\n",
-       "  6: 'Widowed'}}"
+       "  4: 'White'}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "861589de",
    "metadata": {},
    "outputs": [
@@ -1311,7 +1311,7 @@
        "4           Cuba  <=50K  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "bb6fd91b",
    "metadata": {
     "scrolled": true
@@ -1423,7 +1423,7 @@
        " 'hours-per-week']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "46cecef8",
    "metadata": {},
    "outputs": [
@@ -1446,7 +1446,7 @@
        "DecisionTreeClassifier(max_depth=3)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "id": "74276ce0",
    "metadata": {},
    "outputs": [
@@ -1472,7 +1472,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
