--- a/notebooks/working_example_Decision_Tree.ipynb
+++ b/notebooks/working_example_Decision_Tree.ipynb
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "966e9dc9",
+   "id": "ebc36c69",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "9d448928",
    "metadata": {},
    "outputs": [],
@@ -469,7 +469,7 @@
     "            body_left = body + \"{} =< {}\".format(name, threshold)\n",
     "            varset = varset | set([var])\n",
     "            recurse(tree_.children_left[node], depth + 1, body_left, varset)\n",
-    "            body_right = body + \"{} =< {}\".format(name, threshold)\n",
+    "            body_right = body + \"{} > {}\".format(name, threshold)\n",
     "            recurse(tree_.children_right[node], depth + 1, body_right, varset)\n",
     "        else:\n",
     "            freqs = tree_.value[node][0]\n",
@@ -483,8 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ab97c8a3",
+   "execution_count": 11,
+   "id": "a9187187",
    "metadata": {
     "scrolled": true
    },
@@ -585,13 +585,13 @@
       "feature(87, hoursperweek).\n",
       "% path(Vars, Constraint, Pred, Conf) :- Constraint in a path of a decision tree over Vars with prediction Pred and confidence Conf\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X85 =< 7055.5,X83 =< 13.5], 0, 0.9634766339935739).\n",
-      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X85 =< 7055.5,X83 =< 13.5], 0, 0.7466383581033262).\n",
-      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X84,X85,_,_], [X10 =< 0.5,X85 =< 7055.5,X84 =< 20.5], 0, 0.8333333333333334).\n",
-      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X84,X85,_,_], [X10 =< 0.5,X85 =< 7055.5,X84 =< 20.5], 1, 0.975929978118162).\n",
-      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X83 =< 12.5,X85 =< 5095.5], 0, 0.7024279312420574).\n",
-      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X83 =< 12.5,X85 =< 5095.5], 1, 0.9804177545691906).\n",
-      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X83 =< 12.5,X85 =< 5095.5], 1, 0.6682590233545648).\n",
-      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X83 =< 12.5,X85 =< 5095.5], 1, 0.997029702970297).\n"
+      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X85 =< 7055.5,X83 > 13.5], 0, 0.7466383581033262).\n",
+      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X84,X85,_,_], [X10 =< 0.5,X85 > 7055.5,X84 =< 20.5], 0, 0.8333333333333334).\n",
+      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X84,X85,_,_], [X10 =< 0.5,X85 > 7055.5,X84 > 20.5], 1, 0.975929978118162).\n",
+      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 > 0.5,X83 =< 12.5,X85 =< 5095.5], 0, 0.7024279312420574).\n",
+      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 > 0.5,X83 =< 12.5,X85 > 5095.5], 1, 0.9804177545691906).\n",
+      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 > 0.5,X83 > 12.5,X85 =< 5095.5], 1, 0.6682590233545648).\n",
+      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 > 0.5,X83 > 12.5,X85 > 5095.5], 1, 0.997029702970297).\n"
      ]
     }
    ],
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19bc6f94",
+   "id": "614415ab",
    "metadata": {},
    "outputs": [],
    "source": []
