--- a/notebooks/working_example_Decision_Tree.ipynb
+++ b/notebooks/working_example_Decision_Tree.ipynb
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ebc36c69",
+   "id": "ac71e4c2",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "9d448928",
    "metadata": {},
    "outputs": [],
@@ -477,14 +477,15 @@
     "            maxfreq /= sum(freqs)\n",
     "            allf = ','.join( ('X'+str(i) if i in varset else '_') for i in range(len(feature_names)) )\n",
     "            print(\"path([{}], [{}], {}, {}).\".format(allf, body, classes_[pred], maxfreq))\n",
+    "            # print(\"path([{}], {}, {}) :- {{{}}}.\".format(allf, classes_[pred], maxfreq, body))\n",
     "\n",
     "    recurse(0, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a9187187",
+   "execution_count": 17,
+   "id": "d7acc715",
    "metadata": {
     "scrolled": true
    },
@@ -602,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "614415ab",
+   "id": "31e300d3",
    "metadata": {},
    "outputs": [],
    "source": []
