--- a/notebooks/working_example_Decision_Tree.ipynb
+++ b/notebooks/working_example_Decision_Tree.ipynb
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ac71e4c2",
+   "id": "a5ac6530",
    "metadata": {},
    "outputs": [
     {
@@ -436,56 +436,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 112,
    "id": "9d448928",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.tree import _tree\n",
     "\n",
-    "# inspired from https://stackoverflow.com/questions/20224526/how-to-extract-the-decision-rules-from-scikit-learn-decision-tree\n",
-    "def tree_to_code(tree, feature_names):\n",
-    "    tree_ = tree.tree_\n",
-    "    classes_ = tree.classes_\n",
-    "    feature_pos = {f:i for i, f in enumerate(feature_names)}\n",
-    "    feature_name = [\n",
-    "        feature_pos[feature_names[i]] if i != _tree.TREE_UNDEFINED else \"undefined!\"\n",
-    "        for i in tree_.feature\n",
-    "    ]\n",
-    "    print(\":- use_module(library(clpr)).\")\n",
-    "    print(\"% feature(i, constant) :- constant name for the i-th variable\")\n",
-    "    for i, f in enumerate(feature_names):\n",
-    "        print('feature({}, {}).'.format(i, f.lower()))\n",
-    "    \n",
-    "    print(\"% path(Vars, Constraint, Pred, Conf) :- Constraint in a path of a decision tree over Vars with prediction Pred and confidence Conf\")\n",
-    "    def recurse(node, depth, body=\"\", varset=set()):\n",
-    "        indent = \"  \" * depth\n",
-    "        if tree_.feature[node] != _tree.TREE_UNDEFINED:\n",
-    "            var = feature_name[node]\n",
-    "            name = 'X' + str(var)\n",
-    "            threshold = tree_.threshold[node]\n",
-    "            if body != '':\n",
-    "                body = body + ','\n",
-    "            body_left = body + \"{} =< {}\".format(name, threshold)\n",
-    "            varset = varset | set([var])\n",
-    "            recurse(tree_.children_left[node], depth + 1, body_left, varset)\n",
-    "            body_right = body + \"{} > {}\".format(name, threshold)\n",
-    "            recurse(tree_.children_right[node], depth + 1, body_right, varset)\n",
-    "        else:\n",
-    "            freqs = tree_.value[node][0]\n",
-    "            pred, maxfreq = dautils.argmax(freqs)\n",
-    "            maxfreq /= sum(freqs)\n",
-    "            allf = ','.join( ('X'+str(i) if i in varset else '_') for i in range(len(feature_names)) )\n",
-    "            print(\"path([{}], [{}], {}, {}).\".format(allf, body, classes_[pred], maxfreq))\n",
-    "            # print(\"path([{}], {}, {}) :- {{{}}}.\".format(allf, classes_[pred], maxfreq, body))\n",
+    "class Model2CLP:\n",
+    "    def __init__(self, pred_atts, target, df_code):\n",
+    "        self.pred_atts = pred_atts\n",
+    "        self.target = target\n",
+    "        self.df_code = df_code\n",
+    "        self.feature_names = df_code.encoded_atts(pred_atts)\n",
+    "        self.constraints = []\n",
     "\n",
-    "    recurse(0, 1)"
+    "    def tree_to_code(self, tree):\n",
+    "        tree_ = tree.tree_\n",
+    "        classes_ = tree.classes_\n",
+    "        feature_pos = {f:i for i, f in enumerate(self.feature_names)}\n",
+    "        feature_name = [\n",
+    "            feature_pos[self.feature_names[i]] if i != _tree.TREE_UNDEFINED else \"undefined!\"\n",
+    "            for i in tree_.feature\n",
+    "        ]\n",
+    "        nf = len(self.feature_names)\n",
+    "        print(\":- use_module(library(clpr)).\")\n",
+    "        print(\":- use_module(library(lists)).\")\n",
+    "        print(\"% feature(i, constant) :- constant name for the i-th variable\")\n",
+    "        for i, f in enumerate(self.feature_names):\n",
+    "            print('feature({}, {}).'.format(i, f.lower()))\n",
+    "        print('nfeatures({}).'.format(nf))\n",
+    "        print(\"% path(Vars, Constraint, Pred, Conf) :- Constraint in a path of a decision tree over Vars with prediction Pred and confidence Conf\")\n",
+    "        def recurse(node, depth, body=\"\", varset=set()):\n",
+    "            indent = \"  \" * depth\n",
+    "            if tree_.feature[node] != _tree.TREE_UNDEFINED:\n",
+    "                var = feature_name[node]\n",
+    "                name = 'X' + str(var)\n",
+    "                threshold = tree_.threshold[node]\n",
+    "                if body != '':\n",
+    "                    body = body + ','\n",
+    "                body_left = body + \"{} =< {}\".format(name, threshold)\n",
+    "                varset = varset | set([var])\n",
+    "                recurse(tree_.children_left[node], depth + 1, body_left, varset)\n",
+    "                body_right = body + \"{} > {}\".format(name, threshold)\n",
+    "                recurse(tree_.children_right[node], depth + 1, body_right, varset)\n",
+    "            else:\n",
+    "                freqs = tree_.value[node][0]\n",
+    "                pred, maxfreq = dautils.argmax(freqs)\n",
+    "                maxfreq /= sum(freqs)\n",
+    "                allf = ','.join( ('X'+str(i) if i in varset else '_') for i in range(nf) )\n",
+    "                print(\"path([{}], [{}], {}, {}).\".format(allf, body, classes_[pred], maxfreq))\n",
+    "                # print(\"path([{}], {}, {}) :- {{{}}}.\".format(allf, classes_[pred], maxfreq, body))\n",
+    "        recurse(0, 1)\n",
+    "    \n",
+    "    def resetc(self):\n",
+    "        self.constraints = []\n",
+    "        \n",
+    "    def assertc(self, constraint):\n",
+    "        # linear expression on continuous/ordinal features\n",
+    "        self.constraints.append(constraint)\n",
+    "        \n",
+    "    def assertd(self, constraint):\n",
+    "        # equality or membership constraints on nominal features\n",
+    "        # TBD: distinguish between onehot encoded or not\n",
+    "        if self.df_code.onehot:\n",
+    "            pos = constraint.find(\"iff\")\n",
+    "            if pos >= 0:\n",
+    "                x = constraint[:pos].strip()\n",
+    "                leftx = dautils.get_att(x)\n",
+    "                rightx = dautils.get_val(x).lower()\n",
+    "                varx = leftx[:-2] if leftx[-2:]=='CF' else leftx\n",
+    "                sufx = 'CF' if leftx[-2:]=='CF' else ''\n",
+    "                y = constraint[pos+3:].strip()\n",
+    "                lefty = dautils.get_att(y)\n",
+    "                righty = dautils.get_val(y).lower()\n",
+    "                vary = lefty[-2:] if lefty[-2:]=='CF' else lefty\n",
+    "                sufy = 'CF' if lefty[-2:]=='CF' else ''\n",
+    "                con = varx+\"_\"+rightx+sufx+\" = \"+vary+\"_\"+righty+sufy\n",
+    "            else:\n",
+    "                pos = constraint.find(\"=\")\n",
+    "                if pos >= 0:\n",
+    "                    x = constraint[:pos].strip()\n",
+    "                    varx = x[:-2] if x[-2:]=='CF' else x\n",
+    "                    sufx = 'CF' if x[-2:]=='CF' else ''\n",
+    "                    y = constraint[pos+1:].strip()\n",
+    "                    vary = y[:-2] if y[-2:]=='CF' else y\n",
+    "                    sufy = 'CF' if y[-2:]=='CF' else ''\n",
+    "                    if vary in self.df_code.nominal:\n",
+    "                        # equality var1 = var2 \n",
+    "                        con = \", \".join(varx+\"_\"+v.lower()+sufx+\"=\"+vary+\"_\"+v.lower()+sufy for v in self.df_code.encode[varx].keys())\n",
+    "                    else:\n",
+    "                        # equality var1 = const\n",
+    "                        con = varx+\"_\"+y.lower()+sufx+\"=1\"\n",
+    "                else:\n",
+    "                    # IN operator to be implemented\n",
+    "                    raise \"operator not known or implemented\"\n",
+    "        else:\n",
+    "            # non-onehot to be implemented\n",
+    "            raise \"non-onehot is not implemented\"\n",
+    "        self.constraints.append(con)\n",
+    "        \n",
+    "    def test_clause(self):\n",
+    "        Cs = \", \".join(c for c in self.constraints)\n",
+    "        print(\"\"\"\\ntest(XF, XCF, CF, CCF) :- \n",
+    "            nfeatures(N), length(XF, N), length(XCF, N),\n",
+    "            exp2conAll([{}], XF, XCF, Cs),\n",
+    "            path(XF, CF, 1, _), \n",
+    "            path(XCF, CCF, 0, _), \n",
+    "            tell_cs(CF), tell_cs(CCF), tell_cs(Cs).\"\"\".format(Cs))\n",
+    "        \n",
+    "    def closing(self):\n",
+    "        print(\"\\n:- ['post.pl'].\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "d7acc715",
+   "execution_count": 113,
+   "id": "418b2ea6",
    "metadata": {
     "scrolled": true
    },
@@ -495,6 +562,7 @@
      "output_type": "stream",
      "text": [
       ":- use_module(library(clpr)).\n",
+      ":- use_module(library(lists)).\n",
       "% feature(i, constant) :- constant name for the i-th variable\n",
       "feature(0, workclass_federalgov).\n",
       "feature(1, workclass_localgov).\n",
@@ -584,6 +652,7 @@
       "feature(85, capitalgain).\n",
       "feature(86, capitalloss).\n",
       "feature(87, hoursperweek).\n",
+      "nfeatures(88).\n",
       "% path(Vars, Constraint, Pred, Conf) :- Constraint in a path of a decision tree over Vars with prediction Pred and confidence Conf\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X85 =< 7055.5,X83 =< 13.5], 0, 0.9634766339935739).\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X85 =< 7055.5,X83 > 13.5], 0, 0.7466383581033262).\n",
@@ -592,18 +661,35 @@
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 > 0.5,X83 =< 12.5,X85 =< 5095.5], 0, 0.7024279312420574).\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 > 0.5,X83 =< 12.5,X85 > 5095.5], 1, 0.9804177545691906).\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 > 0.5,X83 > 12.5,X85 =< 5095.5], 1, 0.6682590233545648).\n",
-      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 > 0.5,X83 > 12.5,X85 > 5095.5], 1, 0.997029702970297).\n"
+      "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 > 0.5,X83 > 12.5,X85 > 5095.5], 1, 0.997029702970297).\n",
+      "\n",
+      "test(XF, XCF, CF, CCF) :- \n",
+      "            nfeatures(N), length(XF, N), length(XCF, N),\n",
+      "            exp2conAll([ageCF >= age + 1, race_amerindianeskimoCF=race_amerindianeskimo, race_asianpacislanderCF=race_asianpacislander, race_blackCF=race_black, race_otherCF=race_other, race_whiteCF=race_white, sex_maleCF=1, nativecountry_unitedstatesCF = nativecountry_france], XF, XCF, Cs),\n",
+      "            path(XF, CF, 1, _), \n",
+      "            path(XCF, CCF, 0, _), \n",
+      "            tell_cs(CF), tell_cs(CCF), tell_cs(Cs).\n",
+      "\n",
+      ":- ['post.pl'].\n"
      ]
     }
    ],
    "source": [
-    "tree_to_code(clf, encoded_pred_atts)"
+    "m2clp = Model2CLP(pred_atts, target, df_code)\n",
+    "m2clp.tree_to_code(clf)\n",
+    "m2clp.assertc(\"ageCF >= age + 1\") # or any other linear expression on continuous/ordinal features\n",
+    "m2clp.assertd(\"raceCF = race\") # equality on nominal features\n",
+    "m2clp.assertd(\"sexCF = male\") # equality on nominal features\n",
+    "m2clp.assertd(\"nativecountryCF=unitedstates iff nativecountry=france\") # iff on nominal features counterfactual from US iff factual from France\n",
+    "#m2clp.assertd(\"raceCF IN (black, amerindianeskimo)\") # IN operator on nominal features\n",
+    "m2clp.test_clause()\n",
+    "m2clp.closing()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31e300d3",
+   "id": "2c3bd69a",
    "metadata": {},
    "outputs": [],
    "source": []
