--- a/notebooks/working_example_Decision_Tree.ipynb
+++ b/notebooks/working_example_Decision_Tree.ipynb
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a5ac6530",
+   "id": "d398a2e2",
    "metadata": {},
    "outputs": [
     {
@@ -551,8 +551,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "418b2ea6",
+   "execution_count": 114,
+   "id": "e2d575c7",
    "metadata": {
     "scrolled": true
    },
@@ -665,7 +665,7 @@
       "\n",
       "test(XF, XCF, CF, CCF) :- \n",
       "            nfeatures(N), length(XF, N), length(XCF, N),\n",
-      "            exp2conAll([ageCF >= age + 1, race_amerindianeskimoCF=race_amerindianeskimo, race_asianpacislanderCF=race_asianpacislander, race_blackCF=race_black, race_otherCF=race_other, race_whiteCF=race_white, sex_maleCF=1, nativecountry_unitedstatesCF = nativecountry_france], XF, XCF, Cs),\n",
+      "            exp2conAll([ageCF >= age + 1, capitalgainCF >= 2*capitallossCF + 20, race_amerindianeskimoCF=race_amerindianeskimo, race_asianpacislanderCF=race_asianpacislander, race_blackCF=race_black, race_otherCF=race_other, race_whiteCF=race_white, sex_maleCF=1, nativecountry_unitedstatesCF = nativecountry_france], XF, XCF, Cs),\n",
       "            path(XF, CF, 1, _), \n",
       "            path(XCF, CCF, 0, _), \n",
       "            tell_cs(CF), tell_cs(CCF), tell_cs(Cs).\n",
@@ -678,6 +678,7 @@
     "m2clp = Model2CLP(pred_atts, target, df_code)\n",
     "m2clp.tree_to_code(clf)\n",
     "m2clp.assertc(\"ageCF >= age + 1\") # or any other linear expression on continuous/ordinal features\n",
+    "m2clp.assertc(\"capitalgainCF >= 2*capitallossCF + 20\") # or any other linear expression on continuous/ordinal features\n",
     "m2clp.assertd(\"raceCF = race\") # equality on nominal features\n",
     "m2clp.assertd(\"sexCF = male\") # equality on nominal features\n",
     "m2clp.assertd(\"nativecountryCF=unitedstates iff nativecountry=france\") # iff on nominal features counterfactual from US iff factual from France\n",
@@ -689,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c3bd69a",
+   "id": "a405d244",
    "metadata": {},
    "outputs": [],
    "source": []
