--- a/notebooks/working_example_Decision_Tree.ipynb
+++ b/notebooks/working_example_Decision_Tree.ipynb
@@ -43,7 +43,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ruggieri\\AppData\\Local\\Temp\\ipykernel_25148\\1641756020.py:7: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\ruggieri\\AppData\\Local\\Temp\\ipykernel_15292\\1641756020.py:7: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df.columns = df.columns.str.replace(\"[-&]\", \"\")\n"
      ]
     },
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d398a2e2",
+   "id": "bda3c13b",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "id": "9d448928",
    "metadata": {},
    "outputs": [],
@@ -450,6 +450,7 @@
     "        self.df_code = df_code\n",
     "        self.feature_names = df_code.encoded_atts(pred_atts)\n",
     "        self.constraints = []\n",
+    "        self.instances = dict()\n",
     "\n",
     "    def tree_to_code(self, tree):\n",
     "        tree_ = tree.tree_\n",
@@ -489,8 +490,16 @@
     "                # print(\"path([{}], {}, {}) :- {{{}}}.\".format(allf, classes_[pred], maxfreq, body))\n",
     "        recurse(0, 1)\n",
     "    \n",
-    "    def resetc(self):\n",
+    "    def instance(self, name, label):\n",
+    "        if name in self.instances:\n",
+    "            raise \"instance \"+name+\" exists already\"\n",
+    "        n = len(self.instances)\n",
+    "        self.instances[name] = (n, label)\n",
+    "        print(\"instance({}, {}).\".format(n, name))\n",
+    "        \n",
+    "    def reset(self):\n",
     "        self.constraints = []\n",
+    "        self.instances = dict()\n",
     "        \n",
     "    def assertc(self, constraint):\n",
     "        # linear expression on continuous/ordinal features\n",
@@ -500,34 +509,29 @@
     "        # equality or membership constraints on nominal features\n",
     "        # TBD: distinguish between onehot encoded or not\n",
     "        if self.df_code.onehot:\n",
-    "            pos = constraint.find(\"iff\")\n",
+    "            pos = constraint.find(\"<=>\")\n",
     "            if pos >= 0:\n",
     "                x = constraint[:pos].strip()\n",
-    "                leftx = dautils.get_att(x)\n",
-    "                rightx = dautils.get_val(x).lower()\n",
-    "                varx = leftx[:-2] if leftx[-2:]=='CF' else leftx\n",
-    "                sufx = 'CF' if leftx[-2:]=='CF' else ''\n",
+    "                x = x.replace(\"=\", \"_\")\n",
     "                y = constraint[pos+3:].strip()\n",
-    "                lefty = dautils.get_att(y)\n",
-    "                righty = dautils.get_val(y).lower()\n",
-    "                vary = lefty[-2:] if lefty[-2:]=='CF' else lefty\n",
-    "                sufy = 'CF' if lefty[-2:]=='CF' else ''\n",
-    "                con = varx+\"_\"+rightx+sufx+\" = \"+vary+\"_\"+righty+sufy\n",
+    "                y = y.replace(\"=\", \"_\")\n",
+    "                con = x+\" = \"+y\n",
     "            else:\n",
     "                pos = constraint.find(\"=\")\n",
     "                if pos >= 0:\n",
     "                    x = constraint[:pos].strip()\n",
-    "                    varx = x[:-2] if x[-2:]=='CF' else x\n",
-    "                    sufx = 'CF' if x[-2:]=='CF' else ''\n",
+    "                    pos2 = x.find(\"_\")\n",
+    "                    if pos2 < 0:\n",
+    "                        raise \"not a var name \" + x\n",
+    "                    varx = x[pos2+1:]\n",
     "                    y = constraint[pos+1:].strip()\n",
-    "                    vary = y[:-2] if y[-2:]=='CF' else y\n",
-    "                    sufy = 'CF' if y[-2:]=='CF' else ''\n",
-    "                    if vary in self.df_code.nominal:\n",
+    "                    pos2 = y.find(\"_\")\n",
+    "                    if pos2 >= 0 and y[pos2+1:] in self.df_code.nominal:\n",
     "                        # equality var1 = var2 \n",
-    "                        con = \", \".join(varx+\"_\"+v.lower()+sufx+\"=\"+vary+\"_\"+v.lower()+sufy for v in self.df_code.encode[varx].keys())\n",
+    "                        con = \", \".join(x+\"_\"+v.lower()+\" = \"+y+\"_\"+v.lower() for v in self.df_code.encode[varx].keys())\n",
     "                    else:\n",
     "                        # equality var1 = const\n",
-    "                        con = varx+\"_\"+y.lower()+sufx+\"=1\"\n",
+    "                        con = x+\"_\"+y.lower()+\"=1\"\n",
     "                else:\n",
     "                    # IN operator to be implemented\n",
     "                    raise \"operator not known or implemented\"\n",
@@ -538,12 +542,19 @@
     "        \n",
     "    def test_clause(self):\n",
     "        Cs = \", \".join(c for c in self.constraints)\n",
-    "        print(\"\"\"\\ntest(XF, XCF, CF, CCF) :- \n",
-    "            nfeatures(N), length(XF, N), length(XCF, N),\n",
-    "            exp2conAll([{}], XF, XCF, Cs),\n",
-    "            path(XF, CF, 1, _), \n",
-    "            path(XCF, CCF, 0, _), \n",
-    "            tell_cs(CF), tell_cs(CCF), tell_cs(Cs).\"\"\".format(Cs))\n",
+    "        Vars = \", \".join(\"X_\"+v for v in self.instances.keys())\n",
+    "        CCs = \", \".join(\"C_\"+v for v in self.instances.keys())\n",
+    "        Labs = \", \".join(str(label) for _, (_, label) in self.instances.items())\n",
+    "        \n",
+    "        Paths = \", \".join(\"path(X_\"+v+\", C_\"+v+\", \"+str(label)+\", _)\" for v, (_, label) in self.instances.items())\n",
+    "        print(\"\"\"\\ntest(Vars) :- \n",
+    "            nfeatures(N), \n",
+    "            length(Vars, {}),\n",
+    "            lengths(Vars, N),\n",
+    "            paths(Vars, [{}], CCs),\n",
+    "            tells_cs(CCs),\n",
+    "            exp2cons([{}], Vars, Cs),\n",
+    "            tell_cs(Cs).\"\"\".format(len(self.instances), Labs, Cs))\n",
     "        \n",
     "    def closing(self):\n",
     "        print(\"\\n:- ['post.pl'].\")"
@@ -551,8 +562,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "e2d575c7",
+   "execution_count": 9,
+   "id": "37272aaf",
    "metadata": {
     "scrolled": true
    },
@@ -662,13 +673,17 @@
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 > 0.5,X83 =< 12.5,X85 > 5095.5], 1, 0.9804177545691906).\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 > 0.5,X83 > 12.5,X85 =< 5095.5], 1, 0.6682590233545648).\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 > 0.5,X83 > 12.5,X85 > 5095.5], 1, 0.997029702970297).\n",
+      "instance(0, f).\n",
+      "instance(1, cf).\n",
       "\n",
-      "test(XF, XCF, CF, CCF) :- \n",
-      "            nfeatures(N), length(XF, N), length(XCF, N),\n",
-      "            exp2conAll([ageCF >= age + 1, capitalgainCF >= 2*capitallossCF + 20, race_amerindianeskimoCF=race_amerindianeskimo, race_asianpacislanderCF=race_asianpacislander, race_blackCF=race_black, race_otherCF=race_other, race_whiteCF=race_white, sex_maleCF=1, nativecountry_unitedstatesCF = nativecountry_france], XF, XCF, Cs),\n",
-      "            path(XF, CF, 1, _), \n",
-      "            path(XCF, CCF, 0, _), \n",
-      "            tell_cs(CF), tell_cs(CCF), tell_cs(Cs).\n",
+      "test(Vars) :- \n",
+      "            nfeatures(N), \n",
+      "            length(Vars, 2),\n",
+      "            lengths(Vars, N),\n",
+      "            paths(Vars, [0, 1], CCs),\n",
+      "            tells_cs(CCs),\n",
+      "            exp2cons([cf_age >= f_age + 1, cf_capitalgain >= 2*cf_capitalloss + 20, cf_race_amerindianeskimo = f_race_amerindianeskimo, cf_race_asianpacislander = f_race_asianpacislander, cf_race_black = f_race_black, cf_race_other = f_race_other, cf_race_white = f_race_white, cf_sex_male=1, cf_nativecountry_unitedstates = f_nativecountry_france], Vars, Cs),\n",
+      "            tell_cs(Cs).\n",
       "\n",
       ":- ['post.pl'].\n"
      ]
@@ -677,11 +692,13 @@
    "source": [
     "m2clp = Model2CLP(pred_atts, target, df_code)\n",
     "m2clp.tree_to_code(clf)\n",
-    "m2clp.assertc(\"ageCF >= age + 1\") # or any other linear expression on continuous/ordinal features\n",
-    "m2clp.assertc(\"capitalgainCF >= 2*capitallossCF + 20\") # or any other linear expression on continuous/ordinal features\n",
-    "m2clp.assertd(\"raceCF = race\") # equality on nominal features\n",
-    "m2clp.assertd(\"sexCF = male\") # equality on nominal features\n",
-    "m2clp.assertd(\"nativecountryCF=unitedstates iff nativecountry=france\") # iff on nominal features counterfactual from US iff factual from France\n",
+    "m2clp.instance('f', 0) # factual\n",
+    "m2clp.instance('cf', 1) # one counter-factual\n",
+    "m2clp.assertc(\"cf_age >= f_age + 1\") # or any other linear expression on continuous/ordinal features\n",
+    "m2clp.assertc(\"cf_capitalgain >= 2*cf_capitalloss + 20\") # or any other linear expression on continuous/ordinal features\n",
+    "m2clp.assertd(\"cf_race = f_race\") # equality on nominal features\n",
+    "m2clp.assertd(\"cf_sex = male\") # equality on nominal features\n",
+    "m2clp.assertd(\"cf_nativecountry=unitedstates <=> f_nativecountry=france\") # iff on nominal features counterfactual from US iff factual from France\n",
     "#m2clp.assertd(\"raceCF IN (black, amerindianeskimo)\") # IN operator on nominal features\n",
     "m2clp.test_clause()\n",
     "m2clp.closing()"
@@ -690,7 +707,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a405d244",
+   "id": "bb82f3ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "747fdc26",
    "metadata": {},
    "outputs": [],
    "source": []
