--- a/notebooks/working_example_Decision_Tree.ipynb
+++ b/notebooks/working_example_Decision_Tree.ipynb
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bda3c13b",
+   "id": "4b11a8ee",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "37272aaf",
+   "id": "ff05fe46",
    "metadata": {
     "scrolled": true
    },
@@ -694,11 +694,13 @@
     "m2clp.tree_to_code(clf)\n",
     "m2clp.instance('f', 0) # factual\n",
     "m2clp.instance('cf', 1) # one counter-factual\n",
-    "m2clp.assertc(\"cf_age >= f_age + 1\") # or any other linear expression on continuous/ordinal features\n",
+    "m2clp.assertc(\"cf_age >= f_age\") # or any other linear expression on continuous/ordinal features\n",
     "m2clp.assertc(\"cf_capitalgain >= 2*cf_capitalloss + 20\") # or any other linear expression on continuous/ordinal features\n",
     "m2clp.assertd(\"cf_race = f_race\") # equality on nominal features\n",
     "m2clp.assertd(\"cf_sex = male\") # equality on nominal features\n",
     "m2clp.assertd(\"cf_nativecountry=unitedstates <=> f_nativecountry=france\") # iff on nominal features counterfactual from US iff factual from France\n",
+    "#m2clp.assert(\"distance(f, cf, l1) < 0.2\")\n",
+    "#m2clp.assert(\"sparsity(f, cf, l1) < 0.2\")\n",
     "#m2clp.assertd(\"raceCF IN (black, amerindianeskimo)\") # IN operator on nominal features\n",
     "m2clp.test_clause()\n",
     "m2clp.closing()"
@@ -707,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb82f3ac",
+   "id": "cb4cda1a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -715,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "747fdc26",
+   "id": "1ed90727",
    "metadata": {},
    "outputs": [],
    "source": []
