--- a/notebooks/working_example_Decision_Tree.ipynb
+++ b/notebooks/working_example_Decision_Tree.ipynb
@@ -436,8 +436,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9fa10adc",
+   "execution_count": 32,
+   "id": "0cff3621",
    "metadata": {},
    "outputs": [
     {
@@ -536,8 +536,8 @@
       "feature(86, vcapitalloss).\n",
       "feature(87, vhoursperweek).\n",
       "nfeatures(88).\n",
-      "instance(i0, F).\n",
-      "instance(i1, CF).% path(Vars, Constraint, Pred, Conf) :- Constraint in a path of a decision tree over Vars with prediction Pred and confidence Conf\n",
+      "instance(0, iF).\n",
+      "instance(1, iCF).% path(Vars, Constraint, Pred, Conf) :- Constraint in a path of a decision tree over Vars with prediction Pred and confidence Conf\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X85 =< 7055.5,X83 =< 13.5], 0, 0.9634766339935739).\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X85 =< 7055.5,X83 > 13.5], 0, 0.7466383581033262).\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X84,X85,_,_], [X10 =< 0.5,X85 > 7055.5,X84 =< 20.5], 0, 0.8333333333333334).\n",
@@ -552,7 +552,7 @@
       "            lengths(Vars, N),\n",
       "            paths(Vars, [0, 1], CCs),\n",
       "            tells_cs(CCs),\n",
-      "            exp2cons([var(iF, vage)=<var(iCF, vage), 2.0*var(iCF, vcapitalloss)+20.0=<var(iCF, vcapitalgain), var(iCF, vsex_male)=1, var(iCF, vrace)=var(iF, vrace), var(iCF, vnativecountry_unitedstates)=var(iF, vnativecountry_france)], Vars, Cs),\n",
+      "            exp2cons([var(iF, vage)=<var(iCF, vage), 2.0*var(iCF, vcapitalloss)+20.0=<var(iCF, vcapitalgain), var(iCF, vsex_Male)=1, var(iCF, vrace_White)=var(iF, vrace_White),var(iCF, vrace_Other)=var(iF, vrace_Other),var(iCF, vrace_Black)=var(iF, vrace_Black),var(iCF, vrace_AsianPacIslander)=var(iF, vrace_AsianPacIslander),var(iCF, vrace_AmerIndianEskimo)=var(iF, vrace_AmerIndianEskimo), var(iCF, vnativecountry_UnitedStates)=var(iF, vnativecountry_France)], Vars, Cs),\n",
       "            tell_cs(Cs).\n",
       ":- ['post.pl']."
      ]
@@ -562,14 +562,15 @@
     "from clp4xai import Model2CLP\n",
     "\n",
     "m2clp = Model2CLP(pred_atts, target, df_code)\n",
-    "m2clp.model2CLP(clf)\n",
+    "m2clp.model_tree(clf)\n",
     "m2clp.instance('F', 0) # factual\n",
     "m2clp.instance('CF', 1) # one counter-factual\n",
     "m2clp.constraint(\"CF.age >= F.age\") # or any other linear expression on continuous/ordinal features\n",
     "m2clp.constraint(\"CF.capitalgain >= 2*CF.capitalloss + 20\") # or any other linear expression on continuous/ordinal features\n",
-    "m2clp.constraint(\"CF.sex = male\") # equality on nominal features\n",
+    "m2clp.constraint(\"CF.sex = Male\") # equality on nominal features\n",
     "m2clp.constraint(\"CF.race = F.race\") # equality on nominal features\n",
-    "m2clp.constraint(\"CF.nativecountry=unitedstates <=> F.nativecountry=france\") # iff on nominal features counterfactual from US iff factual from France\n",
+    "#m2clp.constraint(\"CF.education >= Somecollege\") # inequality on ordinal features (to be implemented)\n",
+    "m2clp.constraint(\"CF.nativecountry=UnitedStates <=> F.nativecountry=France\") # iff on nominal features counterfactual from US iff factual from France\n",
     "#m2clp.constraint(\"distance(f, cf, l1) < 0.2\")\n",
     "#m2clp.constraint(\"sparsity(f, cf, l1) < 0.2\")\n",
     "#m2clp.constraint(\"raceCF IN (black, amerindianeskimo)\") # IN operator on nominal features\n",
@@ -579,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14a6b987",
+   "id": "41f98bde",
    "metadata": {},
    "outputs": [],
    "source": []
