--- a/notebooks/working_example_Decision_Tree.ipynb
+++ b/notebooks/working_example_Decision_Tree.ipynb
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0cff3621",
+   "id": "5c403cf4",
    "metadata": {},
    "outputs": [
     {
@@ -573,14 +573,14 @@
     "m2clp.constraint(\"CF.nativecountry=UnitedStates <=> F.nativecountry=France\") # iff on nominal features counterfactual from US iff factual from France\n",
     "#m2clp.constraint(\"distance(f, cf, l1) < 0.2\")\n",
     "#m2clp.constraint(\"sparsity(f, cf, l1) < 0.2\")\n",
-    "#m2clp.constraint(\"raceCF IN (black, amerindianeskimo)\") # IN operator on nominal features\n",
+    "#m2clp.constraint(\"CF.race in (black, amerindianeskimo)\") # in operator on nominal features (to be implemented)\n",
     "m2clp.toCLP()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41f98bde",
+   "id": "4d23bd1b",
    "metadata": {},
    "outputs": [],
    "source": []
