--- a/notebooks/working_example_Decision_Tree.ipynb
+++ b/notebooks/working_example_Decision_Tree.ipynb
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "1645b3d2",
+   "id": "750b08da",
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d9e24aa5",
+   "id": "c6f9a338",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "1b7b04e8",
+   "id": "eda48304",
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "557efb1d",
+   "id": "9571075a",
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20dabfd8",
+   "id": "c41c288a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,8 +1235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "df57209c",
+   "execution_count": 53,
+   "id": "7646292f",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,8 @@
       "feature(87, vhoursperweek).\n",
       "nfeatures(88).\n",
       "instance(0, iF).\n",
-      "instance(1, iCF).% path(Vars, Constraint, Pred, Conf) :- Constraint in a path of a decision tree over Vars with prediction Pred and confidence Conf\n",
+      "instance(1, iCF).\n",
+      "% path(Vars, Constraint, Pred, Conf) :- Constraint in a path of a decision tree over Vars with prediction Pred and confidence Conf\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X85 =< 7055.5,X83 =< 13.5], 0, 0.9634766339935739).\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X83,_,X85,_,_], [X10 =< 0.5,X85 =< 7055.5,X83 > 13.5], 0, 0.7466383581033262).\n",
       "path([_,_,_,_,_,_,_,_,_,_,X10,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,X84,X85,_,_], [X10 =< 0.5,X85 > 7055.5,X84 =< 20.5], 0, 0.8333333333333334).\n",
@@ -1361,7 +1362,7 @@
     "from clp4xai import Model2CLP\n",
     "\n",
     "m2clp = Model2CLP(pred_atts, target, df_code)\n",
-    "m2clp.model_tree(clf)\n",
+    "m2clp.model(clf)\n",
     "m2clp.instance('F', 0) # factual\n",
     "m2clp.instance('CF', 1) # one counter-factual\n",
     "m2clp.constraint(\"CF.age >= F.age\") # or any other linear expression on continuous/ordinal features\n",
@@ -1379,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "005d071e",
+   "id": "58eb7cd1",
    "metadata": {},
    "outputs": [],
    "source": []
